TestSuite/errors/err0042.pas
type TClass = class
procedure Test;
begin
end;
end;

destructor Destroy;
begin
end;

begin
end.